--- a/resources/scss/partials/admin.scss
+++ b/resources/scss/partials/admin.scss
@@ -227,4 +227,23 @@
         }
     }
 
+    .setting-card{
+        margin: 60px 0;
+        border: 2px solid #C52133;
+        padding: 15px;
+        border-radius: 5px;
+        transition: .2s all;
+        &:hover{
+            transform: scale(1.1);
+        }
+        a{
+            text-decoration: none;
+            color: #212529;
+            font-size: 1.3rem;
+            font-weight: bold;
+            i{
+                padding-right: 5px;
+            }
+        }
+    }
 }
