add-technologies-create-edit-layout

--- a/resources/scss/partials/admin.scss
+++ b/resources/scss/partials/admin.scss
@@ -96,7 +96,7 @@
     }
 
     form{
-        label{
+        .category{
             font-size: .85rem;
             font-weight: bold;
             padding-left: 7px;
