--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -2,6 +2,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@0,200;0,400;0,600;0,900;1,200;1,400;1,600;1,900&display=swap');
 
 @import 'resources/scss/partials/admin';
+@import 'resources/scss/partials/login';
 
 body{
     font-family: 'Source Sans Pro', sans-serif;
